--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* Section 1 */
 .heading {
-  padding: 55px;
+  padding: 55px 0;
 }
 
 .mini-heading {
@@ -157,7 +157,6 @@ input {
 }
 footer {
   width: 100%;
-  background-color: black;
   padding: 50px 0;
   display: flex;
   flex-direction: row;
